--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,12 @@ spring.mvc.view.suffix=.jsp
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+# the max file size parameter on file upload is in bytes
+# 1024 bytes in a megabyte
+# 1024 * 1024 * 5
+fileupload.maxFileSize=5242880
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.perscholas=DEBUG
