--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>perscholas</groupId>
 	<artifactId>virtualhealthcare</artifactId>
@@ -51,15 +51,15 @@
 		</dependency>
 
 		<!-- webservices -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web-services</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>wsdl4j</groupId>
-			<artifactId>wsdl4j</artifactId>
-			<version>1.6.2</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-web-services</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>wsdl4j</groupId>-->
+<!--			<artifactId>wsdl4j</artifactId>-->
+<!--			<version>1.6.2</version>-->
+<!--		</dependency>-->
 
 		<!--	database-->
 
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
-			<!--			<scope>provided</scope>-->
+
 		</dependency>
 
 		<!-- JSTL -->
